Back-End/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
  - name: status-port
    port: 15021
    targetPort: 15021
    protocol: TCP
  - name: http2
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
  - name: tcp
    port: 31400
    targetPort: 31400
    protocol: TCP
  - name: tls
    port: 15443
    targetPort: 15443
    protocol: TCP
