Back-End/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-stream-balancer-service
spec:
  selector:
    app: go-stream-balancer
  ports:
  - name: http 
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: tcp-load-balancer 
    protocol: TCP
    port: 5000
    targetPort: 5000
  - name: metrics 
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: LoadBalancer
